fixes spacing of submit button in referral form

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -422,7 +422,6 @@ input {
 
 #referral {
   float: left;
-  padding: 0 0 100px 0;
   display: inline-block;
   /*width: 60%;*/
   text-align: left;
